# POET-C-Compiler

./: ReadMe.txt
POET_Source/poet-1.02.06.05/: AUTHORS  COPYING  ChangeLog  Make.inc  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
POET_Source/poet-1.02.06.05/doc/: Makefile  Makefile.am  Makefile.in  manual.tex  tutorial-compiler.tex
POET_Source/poet-1.02.06.05/examples/: BNFexp.code  C.code  C2C.pt  C2F.pt  CFG.pt  IdentityTranslator.pt  Makefile  Makefile.am  Makefile.in  Parse.pt  StringTranslator.pt  applyopt.pt  av1.input  cfg.cpy.out  cfg.out  dgemm.f.save  dgemm_orig.c  exp.input  gemm-orig.pt  gemm1.pt  gemm2.pt  parse.out  poet_mgrid.f.save
POET_Source/poet-1.02.06.05/lib/: C2F.code  Cfront.code  ExpStmt.incl  Ffront.code  Loops.incl  Makefile  Makefile.am  Makefile.in  omp.incl  opt.pi  opt.pt  utils.incl
POET_Source/poet-1.02.06.05/src/: ASTeval.h  ASTvisitor.h  Makefile  Makefile.am  Makefile.in  SymbolTable.h  codegen.cpp  driver.cpp  error_config.h  evalAST.cpp  evalOp.cpp  main.cpp  parse.cpp  pcg  poetAST.cpp  poetAST.h  poet_yacc.c  poet_yacc.y  timing.cpp
POET_Source/poet-1.02.06.05/src/.deps/: codegen.Po  driver.Po  evalAST.Po  evalOp.Po  main.Po  parse.Po  poetAST.Po  poet_lex.Po  poet_yacc.Po  timing.Po
POET_Source/poet-1.02.06.05/test/: Makefile  Makefile.am  Makefile.in
POET_Source/poet-1.02.06.05/test/autoScripts/: Makefile  Makefile.am  Makefile.in  dgemm.c_save  dgemm.pt  dgemm_test.c_save  dgemm_test.pt  dgemm_test1.c_save  dgemm_test1.pt  dgemm_test2.c_save  dgemm_test2.pt  dgemm_test_1.c_save  dgemm_test_2.c_save  dgemvT.c_save  dgemvT.pt  dger.c_save  dger.pt  dgetrf.c_save  dgetrf.pt  dgetrf1.pt  dgetrf_1.c_save  dgetrf_2.c_save  rose_dgemm.C  rose_dgemm_test.C  rose_dgemvT.C  rose_dger.C  rose_dgetrf.C
POET_Source/poet-1.02.06.05/test/commands/: Makefile  Makefile.am  Makefile.in  test1.out  test1.pt  test2.out  test2.pt  test3.out  test3.pt  test4.out  test4.out2  test4.pt
POET_Source/poet-1.02.06.05/test/gemm/: Makefile  Makefile.am  Makefile.in  dgemm.c.save  dgemm_c.c.save  dgemm_k-mb50.c.save  dgemm_k-nb50.c.save  dgemm_k_c.c.save  gemm_block.pt
POET_Source/poet-1.02.06.05/test/gemmATLAS/: Makefile  Makefile.am  Makefile.in  dgemm_kernel.c.nb80.save  dgemm_kernel.c.permute2431.save  dgemm_kernel.c.permute3214.save  dgemm_kernel.c.save  gemm.pt  gemmKernel.pt
POET_Source/poet-1.02.06.05/test/gemvATLAS/: Makefile  Makefile.am  Makefile.in  dgemv_kernel-N.c.permute21.save  dgemv_kernel-N.c.permute2431.save  dgemv_kernel-N.c.permute3214.save  dgemv_kernel-N.c.save  dgemv_kernel-T.c.permute21.save  dgemv_kernel-T.c.permute2431.save  dgemv_kernel-T.c.permute3214.save  dgemv_kernel-T.c.save  gemv-N.pt  gemv-T.pt
POET_Source/poet-1.02.06.05/test/gerATLAS/: Makefile  Makefile.am  Makefile.in  dger_kernel.c.PF4.save  dger_kernel.c.permute21.save  dger_kernel.c.permute2431.save  dger_kernel.c.permute3214.save  dger_kernel.c.save  dger_kernel2.c.save  ger.pt  zger_kernel.c.save  zger_kernel2.c.save
POET_Source/poet-1.02.06.05/test/parseF/: Makefile  Makefile.am  Makefile.in  erlebacher.f  mgrid.f  parseF.pt  poet_erle.f.save  poet_erle.out.save  poet_mgrid.f.save  poet_swim.f.save  poet_tomcatv.f.save  poet_tomcatv.out.save  swim.f  tomcatv.f
POET_Source/poet-1.02.06.05/test/timerGeneration/: Makefile  Makefile.am  Makefile.in  gemm.spec  gemm1.spec  gemm_timer_10_1_generic.c  gemm_timer_10_500_generic.c  gemm_timer_1_1_Pentium.c  gemm_timer_1_1_generic.c  gemm_timer_1_1_x86.c  gemv.spec  gemv_timer_1_100_generic.c  ger.spec  ger_timer_5_100_generic.c  specification.code  timerCodeTemplates.code  timerGeneration.incl  timerGeneration.pt
POET_Source/poet-1.02.06.05/test/tune/: Makefile  Makefile.am  Makefile.in  auto_poet.code  dgemm_test.tune_save  dgemvT.pseat_save  dgemvT.tune_save  dger.tune_save  dgetrf.tune_save  gen_searchInfo.pt  search_spec.code  search_spec_pseat.code
proj/: Grammar Rules.txt  Makefile  README  project.pt  test.c  test2.c  test3.c
proj/myExamples/: identityTranslator.pt  myHelloWorld.pt  out.txt  stringTranslator.pt
